# b-spline

./: Cargo.toml  README.md
examples/: pose.rs
src/: common.rs  lib.rs  so3bspline.rs  traits.rs
