[package]
name = "b-spline"
version = "0.2.0"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "B-spline"
homepage = "https://github.com/powei-lin/b-spline"
repository = "https://github.com/powei-lin/b-spline"
keywords = ["b-spline", "imu"]
categories = ["data-structures", "science", "mathematics"]
exclude = [
    "/.github/*",
    "*.ipynb",
    "scripts/*",
    "examples/*",
    "tests/*",
    "venv/*",
    "data/*",
    ".ruff_cache/*",
    "docs/*",
]

[dependencies]
tiny-solver = "0.17.0"

[dev-dependencies]
env_logger = "0.11.6"
rerun = "0.17.0"
serde = "1.0.217"
serde_json = "1.0.134"

[[example]]
name = "pose"
